fix: implement disabling slider on mobile

--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ body {
   left: 0;
   background-color: #ffffff;
   box-shadow: 0px 15px 13px 0px #192d3313;
-  transition: 0.1s opacity ease-in-out;
+  transition: 0.05s opacity ease-in-out;
 }
 
 .ham-menu ul {
@@ -308,12 +308,14 @@ body {
     display: flex;
     justify-content: center;
     left: 0;
+    top: 0;
   }
   .slideshow .slick {
     width: 80%;
   }
   .titles-btns {
     margin: 0 auto;
+    margin-bottom: 70px;
   }
 
   @media screen and (max-width: 572px) {
@@ -346,7 +348,7 @@ body {
     .titles-btns button {
       margin-bottom: 20px;
     }
-    .slideshow {
+    .slick div:not(:first-child) {
       display: none;
     }
   }
